--- a/Survey_System/Survey_System.csproj
+++ b/Survey_System/Survey_System.csproj
@@ -73,9 +73,16 @@
     </Content>
     <Content Include="Home.aspx" />
     <Content Include="HomeStyle.css" />
+    <Content Include="Images\RegistrationBg.jpg" />
     <Content Include="Images\SurveyImage.jpg" />
+    <Content Include="Login.aspx" />
+    <Content Include="LoginStyle.css" />
     <Content Include="masterStyle.css" />
+    <Content Include="SignupStyle.css" />
+    <Content Include="SurveyerMasterStyle.css" />
     <Content Include="Web.config" />
+    <Content Include="Signup.aspx" />
+    <Content Include="SurveyDashboard.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Home.aspx.cs">
@@ -85,6 +92,13 @@
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -93,11 +107,33 @@
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
+    <Compile Include="Surveyer.Master.cs">
+      <DependentUpon>Surveyer.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Surveyer.Master.designer.cs">
+      <DependentUpon>Surveyer.Master</DependentUpon>
+    </Compile>
     <Compile Include="Utils\DB_Utils.cs" />
+    <Compile Include="Signup.aspx.cs">
+      <DependentUpon>Signup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Signup.aspx.designer.cs">
+      <DependentUpon>Signup.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SurveyDashboard.aspx.cs">
+      <DependentUpon>SurveyDashboard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SurveyDashboard.aspx.designer.cs">
+      <DependentUpon>SurveyDashboard.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Site1.Master" />
+    <Content Include="Surveyer.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
