--- a/Survey_System/Web.config
+++ b/Survey_System/Web.config
@@ -5,9 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="SurveyConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;
-			 AttachDbFilename=D:\DDU data\DDU sem 5\WAD\Survey_System\Survey_System\App_Data\Survey_System_DB.mdf;
-			 Integrated Security=True"/>
+		<add name="SurveyConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aayus\OneDrive\Desktop\Code\PROJECTS\Survey_System\Survey_System\App_Data\Survey_System_DB.mdf;Integrated Security=True"/>
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
